test/suites/fail-lower/L-020b.expected
  × One or more errors occured.

Error: L-020

  × Invalid usage of note Foo
   ╭─[L-020b.pol:3:8]
 2 │ note Foo
 3 │ let x: Foo { B }
   ·        ───
   ╰────
