test/suites/fail-lower/L-020b.pol
data Bar { B }
note Foo
let x: Foo { B }
